--- a/components/ProductModal.module.scss
+++ b/components/ProductModal.module.scss
@@ -26,10 +26,23 @@
   .close {
     @include toRem(top, 20px);
     @include toRem(right, 20px);
+    @include toRem(width, 35px);
+    @include toRem(height, 35px);
     position: absolute;
     z-index: 4;
     background-color: transparent;
     border: 0;
+    color: transparent;
+
+    img {
+      @include toRem(width, 35px);
+      @include toRem(height, 35px);
+      box-sizing: border-box;
+      top: 0;
+      left: 0;
+      position: absolute;
+    }
+
   }
 
 
